# blink

./: .gitignore  Bullpen.fi Frontend-arkitektur.md  CLAUDE.md  COMPREHENSIVE_ANALYSIS.md  Makefile  README.md  SETUP.md  TODO_QSIGMA_QUANT.md  blink.bat  bullpen.bat  package-lock.json  package.json  setup.bat  setup.ps1  setup.sh  skills-lock.json  ssh-key-2026-04-15.key.pub  start-blink.ps1  stop-blink.ps1
blink-engine/: .env.example  .env.live  .env.live.template  .gitignore  CHANGELOG.md  CPX22_SETUP_GUIDE.md  Cargo.toml  Dockerfile  HYPER_MODE.md  LIVE_DEPLOYMENT_STATUS.md  LIVE_OPERATOR_QUICKSTART.md  LIVE_POLYMARKET_GO_LIVE_MASTERPLAN.md  README.md  SESSION_SUMMARY.md  docker-compose.yml  rustfmt.toml  start-web-ui.sh  to-do.md
blink-engine/.cargo/: config.toml
blink-engine/.github/workflows/: ci.yml
blink-engine/alpha-sidecar/: README.md  pyproject.toml
blink-engine/alpha-sidecar/alpha_sidecar/: __init__.py  config.py  main.py  submission.py
blink-engine/alpha-sidecar/alpha_sidecar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
blink-engine/alpha-sidecar/alpha_sidecar/analysis/: __init__.py  auto_tuner.py  calibration.py  consensus.py  llm.py  prompts.py  reasoning.py
blink-engine/alpha-sidecar/alpha_sidecar/connectors/: __init__.py  clob.py  gamma.py  scanner.py
blink-engine/alpha-sidecar/alpha_sidecar/memory/: __init__.py  calibration.py  outcome_tracker.py  prediction_store.py
blink-engine/alpha-sidecar/alpha_sidecar/rag/: news.py
blink-engine/crates/blink-benches/: Cargo.toml  README.md
blink-engine/crates/blink-benches/benches/: cycles.rs  latency.rs
blink-engine/crates/blink-benches/scripts/: run-cycle-gates.sh
blink-engine/crates/blink-book/: Cargo.toml  README.md
blink-engine/crates/blink-book/benches/: bookstore.rs
blink-engine/crates/blink-book/src/: lib.rs
blink-engine/crates/blink-breakers/: Cargo.toml
blink-engine/crates/blink-breakers/benches/: admit.rs
blink-engine/crates/blink-breakers/src/: breaker.rs  kill.rs  lib.rs  loss_cap.rs  set.rs  sliding.rs  slo.rs
blink-engine/crates/blink-breakers/tests/: zero_alloc.rs
blink-engine/crates/blink-chaos/: Cargo.toml
blink-engine/crates/blink-chaos/src/: lib.rs
blink-engine/crates/blink-chaos/tests/: scenario_clob_500_streak.rs  scenario_clock_skew_jump.rs  scenario_connection_reset_mid_post.rs  scenario_rate_limit_429_streak.rs  (+2 more)
blink-engine/crates/blink-cli/: Cargo.toml
blink-engine/crates/blink-h2/: Cargo.toml
blink-engine/crates/blink-ingress/: Cargo.toml
blink-engine/crates/blink-kernel/: Cargo.toml
blink-engine/crates/blink-ops-probes/: Cargo.toml  README.md
blink-engine/crates/blink-rings/: Cargo.toml
blink-engine/crates/blink-shadow/: Cargo.toml
blink-engine/crates/blink-signer/: Cargo.toml
blink-engine/crates/blink-submit/: Cargo.toml
blink-engine/crates/blink-timestamps/: Cargo.toml
blink-engine/crates/blink-types/: Cargo.toml
blink-engine/crates/bpf-probes/: Cargo.toml  README.md
blink-engine/crates/engine/: Cargo.toml  build.rs
blink-engine/crates/market-scanner/: Cargo.toml
blink-engine/crates/tee-vault/: Cargo.toml
blink-engine/data/: alpha_predictions.db  alpha_predictions.db-shm  alpha_predictions.db-wal
blink-engine/docs/: ANOMALY_RESPONSE_AUTOMATION.md  CONFORMAL_RISK_BANDS.md  CONTEXTUAL_BANDIT_ALLOCATION.md  DECISION_THRESHOLDS.md  EXECUTION_DRAG_ATTRIBUTION.md  MARKET_CATEGORY_HEATMAP.md  META_LABELING_PIPELINE.md  MICROSTRUCTURE_IMBALANCE_SCORER.md  OPERATOR_SIGNOFF_PACKET.md  OPUS_OPENCLAW_ORCHESTRATOR_POC.md  OSS_EVAL_STACK_STAGING.md  PRE_POL_HANDOFF.md  PRODUCTION_READINESS_GATE.md  PROVISION.md  PURGED_WALKFORWARD.md  RECOMMENDATION_CONFIDENCE_V2.md  REGIME_CONDITIONAL_RECOMMENDER.md  REGIME_DETECTION.md  ROLLBACK_PACKET_GENERATOR.md  TOXIC_FLOW_ADVISOR.md
blink-engine/docs/rebuild/: P1_COLO_RUNBOOK.md  P1_NODE_RUNBOOK.md  P2_RETIRE_RN1_POLLER.md  P4_TEE_SUBKEY_LEASE_DESIGN.md  P6_ISOLCPUS_HUGEPAGES.md  P6_PGO.md  R1_TEE_AUDIT_CHECKLIST.md  R3_LEGAL_MEMO_STUB.md  R4_MEASUREMENT_INVALIDATION.md  R5_OBSERVER_EFFECT.md  R6_DETERMINISM.md
blink-engine/formal/: Makefile  README.md  foundry.toml
blink-engine/formal/cache/: solidity-files-cache.json
blink-engine/formal/test/: OrderSignerProperties.sol  RiskManagerProperties.sol
blink-engine/infra/: blink-engine-cpx22.service  blink-engine.service  chrony.conf  os_tune.sh  paper-soak-test.env  provision-cpx22.sh  provision.sh  reth_config.toml
blink-engine/infra/oss-eval-stack/: .env.eval.example  blackbox.yml  docker-compose.oss-eval.yml  otel-collector.yml  prometheus.yml  stage-stack.ps1
blink-engine/scripts/: collect_go_live_evidence.sh  index_go_live_evidence.py  pre_pol_check.sh
blink-engine/static/ui/: index.html
blink-engine/tools/: conformal_risk_bands.py  contextual_bandit_allocation.py  eval_experiment_queue.py  eval_scheduler.py  monthly_strategy_review.py  parameter_recommender.py  purged_walkforward.py  quantstats_from_eval.py  regime_conditional_recommender.py  regime_detection.py  run_eval_cycle.py  triple_barrier_labeling.py
blink-engine/tools/examples/: anomaly-response-plan.sample.json  bandit-allocation-summary.sample.json  decision-conformal.sample.json  decision-drift.sample.json  decision-report.sample.json  decision-thresholds.json  eval_experiment_queue.state.sample.json  eval_scheduler.template.json  execution-drag-attribution.sample.json  market-category-heatmap.sample.json  meta_labeling_prices.csv  meta_labeling_signals.csv  operator-signoff-packet.sample.json  production-readiness-anomaly.sample.json  production-readiness-confidence.sample.json  production-readiness-decision.sample.json  production-readiness-gate.sample.json  production-readiness-integrity.sample.json  production-readiness-rollback.sample.json  purged-walkforward-input.sample.csv  purged-walkforward-output.sample.json  rollback-packet.sample.json  toxic-flow-advisor.sample.json
blink-engine/web-ui/: index.html  package-lock.json  package.json  vite.config.ts
blink-engine/web-ui/src/: App.tsx  index.css
docs/: CLAUDE.md  (+2 more)
(+520 files in other folders)
