[workspace]
members = [
    "crates/engine",
    "crates/market-scanner",
    "crates/tee-vault",
    "crates/bpf-probes",
    "crates/blink-cli",
]
resolver = "2"

[workspace.dependencies]
tokio              = { version = "1", features = ["full"] }
tokio-tungstenite  = { version = "0.26", features = ["native-tls"] }
futures-util       = "0.3"
k256               = { version = "0.13", features = ["ecdsa"] }
sha3               = "0.10"
reqwest            = { version = "0.12", features = ["json", "native-tls", "http2"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
simd-json          = "0.14"
dashmap            = "6"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender   = "0.2"
thiserror          = "2"
anyhow             = "1"
dotenvy            = "0.15"
crossbeam-channel  = "0.5"
crossbeam          = "0.8"
core_affinity      = "0.8"
ratatui            = "0.29"
crossterm          = { version = "0.28", features = ["event-stream"] }
chrono             = "0.4"
rand               = "0.8"
hmac               = "0.12"
sha2               = "0.10"
base64             = "0.22"
zeroize            = { version = "1", features = ["derive"] }
aes-gcm            = "0.10"
proptest           = "1"
tee-vault          = { path = "crates/tee-vault" }
bpf-probes         = { path = "crates/bpf-probes" }
axum               = { version = "0.8", features = ["ws"] }
tower-http         = { version = "0.6", features = ["cors", "fs"] }
hdrhistogram       = { version = "7", default-features = true }
lru                = "0.12"

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 256
panic         = "abort"
strip         = "symbols"

[profile.dev]
opt-level = 1
