[package]
name        = "blink-chaos"
version     = "0.1.0"
edition     = "2021"
publish     = false
description = "Chaos / fault-injection harnesses and integration tests for the Blink HFT rebuild."

[lib]
path = "src/lib.rs"

[[bin]]
name = "blink-chaos"
path = "src/bin/blink_chaos.rs"

[dependencies]
tokio             = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util      = { workspace = true }
hyper             = { version = "1", features = ["server", "http2"] }
hyper-util        = { version = "0.1", features = ["tokio"] }
http              = "1"
http-body-util    = "0.1"
rustls            = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
tokio-rustls      = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
rustls-pki-types  = "1"
bytes             = "1"
thiserror         = { workspace = true }
log               = "0.4"
dashmap           = { workspace = true }
parking_lot       = "0.12"
rcgen             = "0.13"

blink-types       = { path = "../blink-types" }
blink-timestamps  = { path = "../blink-timestamps", features = ["fallback-instant"] }
blink-ingress     = { path = "../blink-ingress" }
blink-submit      = { path = "../blink-submit" }
blink-h2          = { path = "../blink-h2" }
blink-signer      = { path = "../blink-signer" }
blink-rings       = { path = "../blink-rings" }
blink-breakers    = { path = "../blink-breakers" }

[dev-dependencies]
tokio             = { workspace = true }
