[package]
name        = "blink-h2"
version     = "0.1.0"
edition     = "2021"
publish     = false
description = "Hot-path HTTP/2 client specialized for persistent POST /order submission."

[lib]
path = "src/lib.rs"

[dependencies]
tokio            = { workspace = true }
bytes            = "1"
log              = "0.4"
thiserror        = { workspace = true }
arc-swap         = "1"
hyper            = { version = "1", features = ["client", "http2"] }
hyper-util       = { version = "0.1", features = ["tokio"] }
http             = "1"
http-body-util   = "0.1"
rustls           = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
tokio-rustls     = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
rustls-pki-types = "1"
blink-timestamps = { path = "../blink-timestamps", features = ["fallback-instant"] }

[dev-dependencies]
tokio  = { version = "1", features = ["macros", "rt-multi-thread", "time", "net", "sync", "io-util"] }
hyper  = { version = "1", features = ["server", "http2"] }
rcgen  = "0.13"
