[package]
name        = "engine"
version     = "0.2.0"
edition     = "2021"
description = "Blink Engine — high-frequency shadow-maker bot for Polymarket CLOB"

[dependencies]
tokio             = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util      = { workspace = true }
reqwest           = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
dashmap           = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber= { workspace = true }
tracing-appender  = { workspace = true }
thiserror         = { workspace = true }
anyhow            = { workspace = true }
dotenvy           = { workspace = true }
crossbeam-channel = { workspace = true }
ratatui           = { workspace = true }
crossterm         = { workspace = true }
chrono            = { workspace = true }
k256               = { workspace = true }
sha3               = { workspace = true }
rand              = { workspace = true }
hmac              = { workspace = true }
sha2              = { workspace = true }
base64            = { workspace = true }
simd-json         = { workspace = true }
clickhouse        = { workspace = true }
tee-vault         = { workspace = true }
zeroize           = { workspace = true }
bpf-probes        = { workspace = true }
axum              = { workspace = true }
tower-http        = { workspace = true }

[features]
default = []
# Enable io_uring network backend (Linux production only).
# Off by default — uses tokio on all platforms including Windows/macOS.
io_uring = []

[dev-dependencies]
proptest          = { workspace = true }
