[package]
name        = "engine"
version     = "0.2.0"
edition     = "2021"
description = "Blink Engine — high-frequency shadow-maker bot for Polymarket CLOB"

[dependencies]
tokio             = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util      = { workspace = true }
reqwest           = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
dashmap           = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber= { workspace = true }
tracing-appender  = { workspace = true }
thiserror         = { workspace = true }
anyhow            = { workspace = true }
dotenvy           = { workspace = true }
crossbeam-channel = { workspace = true }
crossbeam         = { workspace = true }
ratatui           = { workspace = true }
crossterm         = { workspace = true }
chrono            = { workspace = true }
k256              = { workspace = true }
sha3              = { workspace = true }
rand              = { workspace = true }
hmac              = { workspace = true }
sha2              = { workspace = true }
base64            = { workspace = true }
simd-json         = { workspace = true }
clickhouse        = { workspace = true }
tee-vault         = { workspace = true }
zeroize           = { workspace = true }
bpf-probes        = { workspace = true }
axum              = { workspace = true }
tower-http        = { workspace = true }
hdrhistogram      = { workspace = true }
lru               = { workspace = true }

[features]
default = []
# Keep the legacy 6×500 ms fill-window active (for tests that depend on the old timer).
legacy-fill-window = []
# Enable io_uring network backend (Linux production only).
# Off by default — uses tokio on all platforms including Windows/macOS.
io_uring = ["dep:tokio-uring"]

# Convenience feature for Linux production builds.
# Bundles io_uring and any future Linux-only optimisations.
#
# Recommended build command on Linux production nodes:
#   cargo build --release --features prod-linux
#
# Cargo does not support target-conditional default features, so we cannot
# auto-enable io_uring on Linux without an explicit feature flag.  Use the
# build command above in your Dockerfile / systemd unit / deploy script.
prod-linux = ["io_uring"]

[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = { version = "0.5", optional = true }

[dev-dependencies]
proptest          = { workspace = true }
