[package]
name        = "market-scanner"
version     = "0.2.0"
edition     = "2021"
description = "Blink market-scanner — discover and select Polymarket markets by volume"

[[bin]]
name = "market-scanner"
path = "src/main.rs"

[dependencies]
reqwest    = { workspace = true, features = ["blocking", "gzip"] }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
dotenvy    = { workspace = true }
